--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-  <title>Spring Boot - AJAX POST GET Example</title>
+  <title>Simple Chat by me</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -9,23 +9,19 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/js/getrequest.js"></script>
 	<script src="/js/postrequest.js"></script>
-
 </head>
 
 <body> 
 <div class="container"> 
 <div class="col-sm-4">
-	<h3>NodeJS/Express Post/Get Ajax</h3>
+	<h3>Simple chat</h3>
 	<div>		
 		<form id="customerForm">
 		  <div class="form-group">
-			<label for="firstname">FirstName:</label>
-			<input type="text" class="form-control" id="firstname" placeholder="Enter FirstName"/>
+			<label for="message">Message:</label>
+			<input type="text" class="form-control" id="message" placeholder="Enter Message"/>
 		  </div>
-		  <div class="form-group">
-			<label for="lastname">LastName:</label>
-			<input type="text" class="form-control" id="lastname" placeholder="Enter LastName"/>
-		  </div>
+	
 		  <button type="submit" class="btn btn-default">Submit</button>
 		</form>
 	</div>
@@ -33,28 +29,13 @@
 	</div>
 	<br>
 	<div>
-		<button id="allCustomers" type="button" class="btn btn-default">Customers</button>
 		<div id="getResultDiv">
 	        <ul class="list-group">
-						<li></li>
+						
 	    	</ul>
     	</div>
 	</div>
 </div>	
 </div>
-<script type="text/javascript">
-	$(document).ready(function() {
-		
-		setInterval(
-			function(){
-				
-					$.getScript('js/getrequest.js', 
-					function() {
-						ajaxGet();
-					});
-			}, 1000
-		)	
-	});
-</script>
 </body>
 </html>
